--- a/style.css
+++ b/style.css
@@ -3,3 +3,59 @@
   padding: 0px;
   box-sizing: border-box;
 }
+body {
+  background-color: #232222;
+  color: white;
+}
+header {
+  text-align: center;
+  letter-spacing: 10px;
+  color: #efef4d;
+  margin: 30px;
+}
+header h1 {
+  width: 40%;
+  margin: auto;
+  padding-bottom: 3px;
+  border-bottom: 2px solid white;
+}
+.container {
+  display: flex;
+  justify-content: center;
+  margin-top: 15vh;
+}
+.cont {
+  margin: 40px;
+}
+.search_container {
+  text-align: center;
+  margin-top: 15vh;
+}
+input {
+  width: 300px;
+  padding: 5px;
+  margin: 10px;
+  text-align: center;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  word-spacing: 2px;
+}
+button {
+  width: 100px;
+  background-color: green;
+  color: white;
+  padding: 5px;
+  border: none;
+  border-radius: 20px;
+  letter-spacing: 2px;
+}
+button:hover {
+  background-color: white;
+  color: black;
+}
+footer {
+  margin-top: 25vh;
+  text-align: center;
+  color: black;
+}
