--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header h1 {
   margin-top: 15vh;
 }
 .temp p {
+  padding: 10px;
   font-size: large;
 }
 h4 {
@@ -68,4 +69,40 @@ footer {
   margin-top: 25vh;
   text-align: center;
   color: black;
+}
+
+@media (max-width: 900px) {
+  header {
+    width: 100%;
+  }
+  header h1 {
+    width: 80%;
+    margin: auto;
+    border: none;
+  }
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .cont {
+    width: 500px;
+    text-align: center;
+    margin: 30px auto;
+    height: 90px;
+  }
+  .search_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    margin-top: 5vh;
+  }
+  input {
+    width: 300px;
+    height: 30px;
+  }
+  button {
+    width: 200px;
+    height: 40px;
+  }
 }
